first 2 with teja laptop

--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
  </div>
 </section>
 
+<section class="facilities">
+    <h1>Our Facilities</h1>
+    <p>We take pride in connecting our students with top companies across the globe. Through our extensive network of industry<br/>rs, we provide opportunities in diverse sectors including IT, engineering, finance, healthcare, and more. Our dedicated placement team works tirelessly to match every candidate’s skills with the right role, ensuring a smooth transition from classroom learning to real-world careers</p>
+ <div class="row">
+    <div class="facilities-col">
+    <img src="images/amazon1.jpg">
+    <h3>World Class Laibrary</h3>
+    <p>We take pride in connecting our students with top companies across the globe.</p>
+     </div>
+
+      <div class="facilities-col">
+    <img src="images/amazon3.webp">
+    <h3>World Class Laibrary1</h3>
+    <p>We take pride in connecting our students with top companies across the globe.</p>
+     </div>
+ <div class="facilities-col">
+    <img src="images/amazon3.webp">
+    <h3>World Class Laibrary2</h3>
+    <p>We take pride in connecting our students with top companies across the globe.</p>
+     </div>
+
+ </div>
+</section>
+
 
 <!-- ----testimonials----- -->
  <section class="testimonials">
